# itsthejoker.github.io

./: .gitignore  .gitmodules  404.html  CNAME  Makefile  README.md  _config.yml  build.py  go.mod  go.sum  index.html  index.json  index.md  index.xml  pyproject.toml  robots.txt  sitemap.xml
3ds-and-usbc/: index.html  index.md
_posts/: 2016-09-16-welcome-to-jekyll.markdown  2016-09-17-intro-to-distributed-computing-with-python.md  2016-09-17-what-is-good-logging-in-python.md
_resources/: 3ds_showing_charging.jpg_original  3ds_usbc.jpg_original  aquarium-final-result.jpeg_original  closet-based-storage.jpg_original  dells_gameboy.jpg_original  gb_building.jpg_original  gb_usbc.jpg_original  gitea_repo_actions_checkbox.png_original  glued-tv-power-button.jpeg_original  my-gut-says-maybe.gif_original  printfail1.jpeg_original  wall-based-storage.jpg_original
archetypes/: default.md
asciiquarium/: index.html  index.md
assets/: resume.html
categories/: index.html  index.xml
content/: software_and_media.md
css/: main.bundle.min.0ec855d0238d885171b7b2d2597a79fca9046c0ae471cba9c2eed180d4af54dfd7b2d8319e1f4644e362e75f6ee1ee9765939d1a422ece484e4136e26ed58fea.css  style.min.css  style.min.css.map
docs/: 404.md  bootstrap.js  emailmagic.js  index.html  main.css
empathy-and-trauma-part-two/: index.html  index.md
empathy_and_trauma/: index.html  index.md
gitea_actions_and_python/: index.html  index.md
intro_to_3d_printing_part_1/: index.html  index.md
intro_to_3d_printing_part_2/: index.html  index.md
intro_to_3d_printing_part_3/: index.html  index.md
(+186 files in other folders)
