[tool.poetry]
name = "itsthejoker.github.io"
version = "0.1.0"
description = ""
authors = ["Joe Kaufeld <joe@kenzie.academy>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
